# AIGame

./: CMakeLists.txt  CmakeLists.txt
include/: AI.hpp  AI_minmax.hpp  Game.hpp  State.hpp  game.hpp  state.hpp  tools.hpp
src/: AI.cpp  AI_minmax.cpp  AI_minmax.hpp  Game.cpp  State.cpp  game.cpp  game.hpp  main.cpp  state.cpp  state.hpp
